# fast_blackwell

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  matmul_bench.cu  setup.sh
kernels/: cuda_common.cuh  kernel_runners.cuh  kernels.cuh  mma.cuh
kernels/matmul/: kernel_1.cuh  kernel_2.cuh
